--- a/views/index.haml
+++ b/views/index.haml
@@ -1,14 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+!!! XML
+!!! Transitional
 %html
   %head
     %title Formattr
     %meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
     %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
     %script(type="text/javascript" src="/main.js")
-    :css
-      textarea{
-        font-size:11px;
-      }
+    %link{:rel => "stylesheet", :href => "/main.css", :type => "text/css", :media => "all"}
   %body
     %textarea(cols="80" rows="12" id="input")
     %button(id="rdoc_btn") rDoc it!
