--- a/views/index.haml
+++ b/views/index.haml
@@ -16,3 +16,4 @@
     .group
       .label Out
       #results Output...
+    <a href="http://github.com/danielbeardsley/formattr"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a
