Added a Title and some more styling

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,6 +8,7 @@
     %script(type="text/javascript" src="/main.js")
     %link{:rel => "stylesheet", :href => "/main.css", :type => "text/css", :media => "all"}
   %body
+    .title Formattr
     .group
       .label In
       %textarea#input(rows="12")
