--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -11,7 +11,15 @@ $output_color: #555
 	padding: 10px
 
 body
-	font-family: Arial
+	font-family: Arial, sans-serif
+	margin: 3px 15px
+	background-color: #f7f7f7
+
+.title
+	font-size: 40px
+	color: #874
+	font-weight: bold
+	letter-spacing: 1px
 
 #input
 	@include nice-border
@@ -27,11 +35,13 @@ body
 	color: $output_color
 	min-width: 600px
 	float: left
+	background-color: white
 
 .label
 	color: #595
 	font-size: 30px
 	font-weight: bold
+	letter-spacing: 1px
 
 .group
 	clear: both
