--- a/views/index.haml
+++ b/views/index.haml
@@ -7,6 +7,7 @@
     %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
     %script(type="text/javascript" src="/main.js")
     %link{:rel => "stylesheet", :href => "/main.css", :type => "text/css", :media => "all"}
+    = haml :analytics
   %body
     .title Formattr
     .group
