Fixed some page width issues

--- a/views/index.haml
+++ b/views/index.haml
@@ -17,7 +17,8 @@
         .clear
       .clear
     .group
-      %textarea#input(rows="12")
+      #input_wrapper
+        %textarea#input(rows="12")
     .group#middle_buttons
       #go_btn GO
       .buttons#output_view_buttons
