--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -1,3 +1,4 @@
+$page_width: 800px
 $output_color: #555
 $button_color: #aad
 $light_button: lighten($button_color, 10%)
@@ -38,6 +39,7 @@ body
 	font-family: Arial, sans-serif
 	margin: 3px 15px
 	background-color: $background
+	max-width: $page_width
 
 .title
 	font-size: 40px
@@ -45,20 +47,23 @@ body
 	font-weight: bold
 	letter-spacing: 1px
 
+#input_wrapper
+	padding-right: 20px
+
 #input
 	@include nice-border
 	@include top-shadow
 	background-color: white
 	font-size: 11px
-	width: 800px
+	width: 100%
 
 
 #results
 	@include nice-border
 	@include top-shadow
+	padding: 10px
 	font-size: 13px
 	color: $output_color
-	width: 800px
 	background-color: white
 
 .group
