Styling of the GO button

--- a/views/index.haml
+++ b/views/index.haml
@@ -20,7 +20,7 @@
       #input_wrapper
         %textarea#input(rows="12")
     .group#middle_buttons
-      #go_btn GO
+      #go_btn GO!
       .buttons#output_view_buttons
         .button.left_most#visual_output_btn Visual
         .button.right_most#code_output_btn&= '<code>'
