Added Code / Visual tab switching

--- a/views/index.haml
+++ b/views/index.haml
@@ -28,6 +28,6 @@
       .clear
     .group
       #results
-        #visual_output Output...
-        #code_output Output...
+        .result_panel#visual_output nothing yet...
+        .result_panel#code_output(style="display:none")&= '<b>no code yet...</b>'
     <a href="http://github.com/danielbeardsley/formattr"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a
