Added support for Markdown

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,6 +13,7 @@
     .group
       .buttons#format_buttons
         .button.left_most#rdoc_btn rDoc
+        .button#markdown_btn MarkDown
         .button.right_most#sass_btn Sass
         .clear
       .clear
