Add minimal support for error handling

--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -75,6 +75,10 @@ body
 	right: 0px
 	min-height: 100px
 
+#results.error .result_panel
+	border-color: red
+	color: red
+
 .result_panel#code_output
 	@include monospaced
 	font-size: 11px
