Added Author tag

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,6 +10,9 @@
     = haml :analytics
   %body
     .title Formattr
+    .author
+      by
+      %a(href='http://www.danielbeardsley.com') Daniel Beardsley
     .group
       .buttons#format_buttons
         .button.left_most#rdoc_btn rDoc
