--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -51,6 +51,11 @@ body
 	font-weight: bold
 	letter-spacing: 1px
 
+.author
+	text-align: right
+	font-size: 0.8em
+	color: $dark_button
+
 #input_wrapper
 	padding-right: 20px
 
