Added support for Haml

--- a/views/index.haml
+++ b/views/index.haml
@@ -17,6 +17,7 @@
       .buttons#format_buttons
         .button.left_most#rdoc_btn rDoc
         .button#markdown_btn MarkDown
+        .button#haml_btn Haml
         .button.right_most#sass_btn Sass
         .clear
       .clear
